name:                clingo
version:             0.1.0.0
synopsis:            Haskell bindings to the Clingo ASP solver
description:         Please see README.md
homepage:            https://github.com/tsahyt/clingo-haskell#readme
license:             GPL-3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2016 Paul Ogris
category:            ASP, Math, Symbolic Computation, Logic Programming, FFI
build-type:          Simple
extra-source-files:  cbits/wrappers.c
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Clingo.Clingo
                       Clingo.Raw
                       Clingo.Raw.AST
                       Clingo.Raw.Asynchronous
                       Clingo.Raw.Basic
                       Clingo.Raw.Configuration
                       Clingo.Raw.Control
                       Clingo.Raw.Enums
                       Clingo.Raw.Inspection.Symbolic
                       Clingo.Raw.Inspection.Theory
                       Clingo.Raw.Iterative
                       Clingo.Raw.Model
                       Clingo.Raw.ProgramBuilding
                       Clingo.Raw.Propagation
                       Clingo.Raw.Statistics
                       Clingo.Raw.Symbol
                       Clingo.Raw.Types
  c-sources:           cbits/wrappers.c
  build-depends:       base >= 4.7 && < 5
  extra-libraries:     clingo
  include-dirs:        include
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsahyt/clingo-haskell
