name:                clingo
version:             0.1.0.0
synopsis:            Haskell bindings to the Clingo ASP solver
description:         Please see README.md
homepage:            https://github.com/tsahyt/clingo-haskell#readme
license:             GPL-3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2016 Paul Ogris
category:            ASP, Math, Symbolic Computation, Logic Programming, FFI
build-type:          Simple
extra-source-files:  cbits/wrappers.c
cabal-version:       >=1.10

flag examples
  description:       Build examples
  default:           True

library
  hs-source-dirs:      src
  exposed-modules:     Clingo.Control
                       Clingo.AST
                       Clingo.Symbol
                       Clingo.Configuration
                       Clingo.Statistics
                       Clingo.Asynchronous
                       Clingo.Model
                       Clingo.Iterative
                       Clingo.Internal.Inspection.Symbolic
                       Clingo.Internal.Inspection.Theory
                       Clingo.Inspection.Symbolic
                       Clingo.Inspection.Theory
                       Clingo.ProgramBuilding
                       Clingo.Propagation
                       Clingo.Internal.AST
                       Clingo.Internal.Statistics
                       Clingo.Internal.Propagation
                       Clingo.Internal.Configuration
                       Clingo.Raw
                       Clingo.Raw.AST
                       Clingo.Raw.Asynchronous
                       Clingo.Raw.Basic
                       Clingo.Raw.Configuration
                       Clingo.Raw.Control
                       Clingo.Raw.Enums
                       Clingo.Raw.Inspection.Symbolic
                       Clingo.Raw.Inspection.Theory
                       Clingo.Raw.Iterative
                       Clingo.Raw.Model
                       Clingo.Raw.ProgramBuilding
                       Clingo.Raw.Propagation
                       Clingo.Raw.Statistics
                       Clingo.Raw.Symbol
                       Clingo.Raw.Types
  other-modules:       Clingo.Internal.Utils
                       Clingo.Internal.Types
  c-sources:           cbits/wrappers.c
  build-depends:       base >= 4.7 && < 5,
                       transformers,
                       mtl,
                       exceptions,
                       text,
                       deepseq,
                       StateVar
  extra-libraries:     clingo
  include-dirs:        include
  ghc-options:         -Wall
  default-language:    Haskell2010

executable version
  if flag(examples)
      build-depends:   base, clingo
  else 
      buildable:       False

  hs-source-dirs:      examples
  main-is:             Version.hs
  default-language:    Haskell2010

executable dot-propagator
  if flag(examples)
      build-depends:   base, clingo, text
  else 
      buildable:       False

  hs-source-dirs:      examples
  main-is:             DotPropagator.hs
  default-language:    Haskell2010

executable control
  if flag(examples)
      build-depends:   base, clingo, text
  else 
      buildable:       False

  hs-source-dirs:      examples
  main-is:             Control.hs
  default-language:    Haskell2010

executable configuration
  if flag(examples)
      build-depends:   base, clingo, text, StateVar
  else 
      buildable:       False

  hs-source-dirs:      examples
  ghc-options:         -Wall
  main-is:             Configuration.hs
  default-language:    Haskell2010

executable theory-atoms
  if flag(examples)
      build-depends:   base, clingo, text
  else 
      buildable:       False

  hs-source-dirs:      examples
  main-is:             TheoryAtoms.hs
  default-language:    Haskell2010

executable symbolic-atoms
  if flag(examples)
      build-depends:   base, clingo, text
  else 
      buildable:       False

  hs-source-dirs:      examples
  main-is:             SymbolicAtoms.hs
  default-language:    Haskell2010

executable ast
  if flag(examples)
      build-depends:   base, clingo, text
  else 
      buildable:       False

  hs-source-dirs:      examples
  main-is:             AST.hs
  default-language:    Haskell2010

executable backend
  if flag(examples)
      build-depends:   base, clingo, text
  else 
      buildable:       False

  hs-source-dirs:      examples
  main-is:             Backend.hs
  default-language:    Haskell2010

executable statistics
  if flag(examples)
      build-depends:   base, clingo, text, wl-pprint-text, StateVar
  else 
      buildable:       False

  hs-source-dirs:      examples
  main-is:             Statistics.hs
  default-language:    Haskell2010

executable propagator
  if flag(examples)
      build-depends:   base, clingo, text, containers, transformers
  else 
      buildable:       False

  hs-source-dirs:      examples
  main-is:             Propagator.hs
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/tsahyt/clingo-haskell
